<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".StudySkill2Activity">
    <TextView
        android:id="@+id/Intro_study_skill2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_skill2"/>
    <TextView
        android:id="@+id/skill2_routine1"
        android:layout_below="@+id/Intro_study_skill2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/skill2Routine1"/>
    <TextView
        android:id="@+id/skill2_routine2"
        android:layout_below="@+id/skill2_routine1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/skill2Routine2"/>
    <TextView
        android:id="@+id/skill2_routine3"
        android:layout_below="@+id/skill2_routine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/skill2Routine3"/>
    <TextView
        android:id="@+id/skill2_routine4"
        android:layout_below="@+id/skill2_routine3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/skill2Routine4"/>
    <TextView
        android:id="@+id/skill2_routine5"
        android:layout_below="@+id/skill2_routine4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/skill2Routine5"/>
    <TextView
        android:id="@+id/skill2_routine6"
        android:layout_below="@+id/skill2_routine5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/skill2Routine6"/>
    <TextView
        android:id="@+id/skill2_routine7"
        android:layout_below="@+id/skill2_routine6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/skill2Routine7"/>

</RelativeLayout>