<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudySkill3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/Intro_study_skill3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SQ_intro"/>
        <TextView
            android:id="@+id/skill2_routine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/SQ_scan"/>
        <TextView
            android:id="@+id/skill2_routine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/SQ_question"/>
        <TextView
            android:id="@+id/skill2_routine3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/SQ_read"/>
        <TextView
            android:id="@+id/skill2_routine4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/SQ_recite"/>
        <TextView
            android:id="@+id/skill2_routine5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/SQ_review"/>

    </LinearLayout>

</ScrollView>