<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".support_page">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Intro_support_page"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Intro_sam"
        android:textStyle="bold"
        android:paddingTop="16dp"
        />
    <TextView
        android:id="@+id/hyperlinkText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Call"
        android:paddingTop="16dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextShout"
        android:paddingTop="16dp"
        />

</LinearLayout>