<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".question_page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/widget"
            android:textAlignment="center"
            android:text="This  assessment is designed to help you know how you are doing" />

        <TextView
            style="@style/widget"
            android:layout_marginTop="16dp"
            android:text="@string/how_is_the_assessment_calculated" />

        <TextView
            style="@style/widget"
            android:layout_marginTop="16dp"
            android:text="@string/answer_to_question" />

        <TextView
            style="@style/widget"
            android:layout_marginTop="16dp"
            android:text="@string/assement_duration" />
        <TextView
            android:id="@+id/text_view_highscores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="Highscore: 0"
            android:textSize="20sp" />


    </LinearLayout>


    <Button
        android:id="@+id/start_assessment"
        style="@style/widget"
        android:layout_alignParentBottom="true"
        android:text="Start Assessment" />


</RelativeLayout>